add error controller

--- a/src/main/resources/templates/error-404.html
+++ b/src/main/resources/templates/error-404.html
@@ -3,6 +3,6 @@
         ERROR
     </head>
     <body style="text-align: center">
-        500: Internal Server Error
+        404: Not Found
     </body>
 </html>
